refactor project to support multi submodules.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ node_js:
 before_install: npm install -g grunt-cli
 install:
 - npm update
-before_script: grunt build
+before_script: grunt build_test_all
 
