--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "mocha": "^2.3.3",
     "tslint": "^2.5.1"
   },
+  "scripts": {
+    "test": "grunt build_test_all"
+  },
   "private": true
 }
