--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "license": " Apache-2.0",
   "dependencies": {
-    "lodash": "~3.10.1",
+    "lodash": "~4.2.1",
     "chevrotain": "~0.5.13"
   },
   "devDependencies": {
@@ -11,24 +11,15 @@
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.1",
-    "grunt-jasmine-node-coverage": "^0.4.1",
-    "grunt-karma": "~0.12.1",
     "grunt-mocha-istanbul": "^3.0.1",
     "grunt-ts": "~5.3.0-beta.3",
     "grunt-tslint": "~3.0.1",
-    "grunt-umd": "~2.3.5",
     "istanbul": "^0.4.1",
-    "karma": "~0.13.19",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "~0.2.2",
-    "karma-firefox-launcher": "~0.1.7",
-    "karma-ie-launcher": "~0.2",
-    "karma-mocha": "^0.2.1",
     "mocha": "^2.3.4",
     "tslint": "^3.2.1"
   },
   "scripts": {
-    "test": "grunt build_test_all"
+    "test": "grunt test"
   },
   "private": true
 }
