--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-ts": "~5.3.0-beta.3",
     "grunt-tslint": "~3.0.1",
     "istanbul": "^0.4.1",
+    "load-grunt-tasks": "^3.4.0",
     "mocha": "^2.3.4",
     "tslint": "^3.2.1"
   },
