--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "license": " Apache-2.0",
   "dependencies": {
     "lodash": "~4.6.1",
-    "chevrotain": "~0.5.13"
+    "chevrotain": "*"
   },
   "devDependencies": {
     "chai": "^3.4.1",
+    "grunt": "^0.4.5",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.0",
