--- a/package.json
+++ b/package.json
@@ -1,27 +1,7 @@
 {
-  "name": "json_editor_services",
+  "name": "json_editor_services_webpage",
   "version": "0.1.0",
   "license": " Apache-2.0",
-  "dependencies": {
-    "lodash": "~4.6.1",
-    "chevrotain": "*"
-  },
-  "devDependencies": {
-    "chai": "^3.4.1",
-    "grunt": "^0.4.5",
-    "grunt-cli": "~0.1.13",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.0",
-    "grunt-mocha-istanbul": "^3.0.1",
-    "grunt-ts": "~5.3.0-beta.3",
-    "grunt-tslint": "~3.0.1",
-    "istanbul": "^0.4.1",
-    "load-grunt-tasks": "^3.4.0",
-    "mocha": "^2.3.4",
-    "tslint": "^3.2.1"
-  },
-  "scripts": {
-    "test": "grunt test"
-  },
+  "devDependencies": {},
   "private": true
 }
